Fix dropdown rendering
Unfortunately the dropdown is set to `position: absolute` and attached
to a `position: relative` div which is nested in a div with `overflow:
hidden` set on it. That means that the dropdown can not be rendered
outside of the main content window (the white window in the middle).

The fix for this would be to unset `position: relative` on that div and
then position everything using JavaScript but that would complicate
everything immensly. Instead as a hack I decided to simply render the
dropdown above the anchor point which allows us to use the fact that
there is extra space above the track list. Thanks to that the content of
the dropdown will never even get close to the boundary of the main
content window. I guess it is now a dropup.

--- a/src/components/Dropdown.scss
+++ b/src/components/Dropdown.scss
@@ -1,4 +1,3 @@
-$arrow-offset: 20px;
 $black-overlay-z-index: 9;
 $close-overlay-z-index: 10;
 $content-z-index: 11;
@@ -18,7 +17,7 @@ $content-z-index: 11;
 
     .black-overlay {
         pointer-events: none;
-        transition: opacity 1s;
+        transition: opacity $transition-duration;
         background-color: #000;
         z-index: $black-overlay-z-index;
         opacity: 0;
@@ -31,28 +30,14 @@ $content-z-index: 11;
     .wrapper {
         position: relative;
 
-        .arrow, .content {
+        .content {
             z-index: $content-z-index;
-        }
-
-        .arrow {
-            width: 0;
-            height: 0;
-            border-left: 5px solid transparent;
-            border-right: 5px solid transparent;
-            border-bottom: 5px solid $box-normal-background-color;
-
-            position: absolute;
-            top: 100%;
-            right: 50%;
-            margin-top: -5px;
-            margin-right: -5px;
         }
 
         .content {
             position: absolute;
-            top: 100%;
-            right: -$arrow-offset;
+            bottom: 0;
+            right: -20px;
             width: 200px;
             border: 1px solid $box-normal-background-color;
             border-radius: $box-border-radius;
